some working player with no blockicn request of 1 second through cloudflared tunnel.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,36 @@
-hello.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header id="header">
+        <button id="hamburger-button">☰</button>
+        <input type="text" id="search-bar" placeholder="Търсене...">
+        <button id="search-button">🔍</button>
+    </header>
+    <nav id="navibar">
+        <ul>
+            <li><a href="/">Начало</a></li>
+            <li><a href="/lecturers">Лектори</a></li>
+            <li><a href="/books">Книги</a></li>
+            <li><a href="/photos">Снимки</a></li>
+            <li><a href="/about-us">За нас</a></li>
+        </ul>
+        <div id="toggle-mode-container">
+            <label for="toggle-mode">Dark Mode</label> <input type="checkbox" id="toggle-mode">
+        </div>
+        <footer>
+            <p>Добротата е език, който глухите могат да чуят, а слепите – да видят.</p>
+            <p>~ Марк Твен</p>
+        </footer>
+    </nav>
+    <main id="main-content">
+        <!-- Main content goes here -->
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
