--- a/frontend/audioplayer.html
+++ b/frontend/audioplayer.html
@@ -15,10 +15,10 @@
     <nav id="navibar">
         <ul>
             <li><a href="/">Начало</a></li>
-            <li><a href="/lecturers">Лектори</a></li>
-            <li><a href="/books">Книги</a></li>
-            <li><a href="/photos">Снимки</a></li>
-            <li><a href="/about-us">За нас</a></li>
+            <li><a href="/lectures.html">Лектори</a></li>
+            <!-- <li><a href="/books">Книги</a></li> -->
+            <!-- <li><a href="/photos">Снимки</a></li> -->
+            <li><a href="/about-us.html">За нас</a></li>
         </ul>
         <div id="toggle-mode-container">
             <label for="toggle-mode">Dark Mode</label> <input type="checkbox" id="toggle-mode">
@@ -29,7 +29,12 @@
         </footer>
     </nav>
     <main id="main-content">
-        <!-- Main content goes here -->
+        <div id="audio-player-div">
+            <!-- Audio player content goes here -->
+        </div>
+        <div id="next-random-div">
+            <!-- Next random content goes here -->
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
