--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="/">Начало</a></li>
             <li><a href="/lectures.html">Лектори</a></li>
-            <!-- <li><a href="/books">Книги</a></li> -->
+            <li><a href="/books.html">Книги</a></li>
             <!-- <li><a href="/photos">Снимки</a></li> -->
             <li><a href="/about-us.html">За нас</a></li>
         </ul>
